<resources>
    <string name="app_name">WomenSafe</string>
    <string name="senha">Senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="entrar">Entrar</string>
    <string name="logo_womensafe">Logo WomenSafe</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="email_required">Email obrigatório</string>
    <string name="password_required">Senha obrigatória</string>
    <string name="short_password">Senha precisa ter ao menos 6 caracteres</string>
    <string name="auth_email">Email autenticado, para concluir o cadastro preencha o perfil!</string>
    <string name="cancelar">Cancelar</string>
    <string name="usu_nome">Usuário</string>
    <string name="nome_completo">Nome completo</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="confirmar">Confirmar</string>
    <string name="excluir_conta">Excluir Conta</string>
    <string name="clique">Clique</string>
    <string name="cadastro_guard_titulo">CADASTRO DE GUARDIÕES</string>
    <string name="informativo_guardioes">Cadastre até 3 pessoas de confinça a quem recorrer quando necessário!</string>
    <string name="womensafe_funcionalidades">WOMENSAFE - FUNCIONALIDADES:</string>
    <string name="bt_vitima_assedio_violencia">FUI VÍTIMA DE ASSÉDIO/VIOLÊNCIA</string>
    <string name="informativo_reset_senha">Informe seu email para alterar sua senha.</string>
    <string name="informativo_link_1">Para mais informações referentes ao infográfico, a ações legais, inclusive em caso de violência, tipos de assédio, clique no seguinte botão:</string>
    <string name="informativo_link2">Os Centros Especializados de Atendimento à Mulher – CEAM ofertam o acolhimento(social, psicológico, pedagógico e de orientação jurídica) às mulheres em situação de violência, para mais informações clique no botão seguinte:</string>
    <string name="informativo_link3">Caso foi vítima de assalto é de extrema importância o registro de um boletim de ocorrência, que pode ser feito ao clicar no botão seguinte:</string>
    <string name="perfil">Perfil</string>
    <string name="seus_guardioes">SEUS GUARDIÕES</string>
    <string name="cadastrar_guardioes">Cadastrar guardião</string>
    <string name="locais_perigosos">Locais Perigosos</string>
    <string name="corridas_confiaveis">Corridas Confiáveis</string>
    <string name="guardioes">Guardiões</string>
    <string name="minhas_contribuicoes">Minhas Contribuições</string>
    <string name="informacoes">Informações</string>
    <string name="faca_seu_cadastro">Faça seu cadastro!</string>
    <string name="email_vazio">EV</string>
    <string name="senha_tamanho_invalido">SC</string>
    <string name="senha_vazia">SV</string>
    <string name="SOS_message">Em caso de emergência, clique no botão abaixo!</string>
    <string name="enviar">Enviar</string>
    <string name="placas_avaliadas">Placas Avaliadas</string>
    <string name="avaliar_placa">Avaliar Placa</string>
    <string name="numero_placa">Número da placa (Ex: ABC-1234)</string>
    <string name="comentario">Comentário. Lembre-se que devem ser registradas somente experiências em que o motorista cometeu qualquer tipo de assédio. Qualquer outro caso deve ser relatado no suporte do aplicativo em questão.</string>
    <string name="cadastro_placa_avaliacao">Cadastro placa avaliação</string>
    <string name="request_plate">Placa deve ser preenchida!</string>
    <string name="concluir_cadastro">Email autenticado, para concluir o cadastro preencha o perfil!</string>
    <string name="welcome">Bem vindo/a!</string>
    <string name="required_fiel_profile">Preenchimento de todos  os campos do perfil obrigratório</string>
    <string name="field_required">Todos os campos devem ser preenchidos!</string>
    <string name="save_profile">Perfil salvo!</string>
    <string name="error_id_user">Erro na recuperação da identificação do usuário</string>
    <string name="user_delete_sucess">Usuário excluido com sucesso</string>
    <string name="write_email">Digite o E-mail</string>
    <string name="recover_password_success">E-mail para recuperar senha enviado</string>
    <string name="guardian_registered">Guardião cadastrado!</string>
    <string name="error">Ocorreu um erro</string>
    <string name="limit_guardians">Você já tem 3 guardiões cadastrados</string>
    <string name="guardian_remove_success">Guardião removido com sucesso!</string>
    <string name="error_remove_guardian">Não foi possível remover este guardião.</string>
    <string name="invalid_plate">Placa inválida.</string>
    <string name="plate_comment_required">Comentário deve ser preenchido!</string>
    <string name="plate_registered_success">Placa cadastrada com sucesso!</string>
    <string name="error_plate_register">Erro ao cadastrar placa.</string>
    <string name="length_comment_plate_required">Comentário deve ter pelo menos 100 caracteres</string>
    <string name="title_activity_maps">Map</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="phone_required">Telefone obrigatório</string>
    <string name="phone_invalid">Telefone inválido</string>
    <string name="name_required">Nome é obrigatório</string>
    <string name="ask_dangerous_local">Deseja marcar esse ponto do mapa como perigioso?</string>
    <string name="local_perigoso_marcado">MARCADO COMO LOCAL PERIGOSO!</string>
    <string name="marcar_local_perigoso">Marcar local perigoso!</string>
    <string name="digite_local">Digite um local.</string>
    <string name="nome_titulo">\Nome: \</string>
    <string name="telefone_titulo">\Telefone: \</string>
    <string name="buscar_locais">Buscar locais</string>
    <string name="cadastro_lugar_perigoso">Cadastro lugar perigoso</string>
    <string name="local_not_found">Local não encontrado!</string>
    <string name="placas">Placas</string>
    <string name="lugares_perigosos">Lugares Perigosos</string>
    <string name="plate_successfully_removed">Avaliação da placa excluída!</string>
    <string name="error_delete_plate">Não foi possível excluir avaliação desta placa!</string>
    <string name="SpotEvaluation_successfully_delete">Avaliação do local excluída!</string>
    <string name="SpotEvaluation_register_ok">Ponto registrado com sucesso! Obrigada!</string>
    <string name="SpotEvaluation_too_short">Avaliação muito curta</string>
    <string name="required_SpotEvaluation">Você deve avaliar o local!</string>
    <string name="error_SpotEvaluation_delete">Não foi possível excluir está avaliação!</string>
    <string name="manual_message">Clique em um local do mapa para marcar um ponto de perigo. Para saber as avaliações de um ponto já marcado, clique no marcador. Para mandar sua localização aos seus guardiões clique no segundo icone no canto superior direito da tela.</string>
    <string name="how_touse_map">Como usar</string>
    <string name="dialog_ok">OK, ENTENDI</string>
    <string name="dialog_dontShowAgain">OK, NÃO MOSTRAR NOVAMENTE</string>
    <string name="address_unavailable">Endereço Indiponível</string>
    <string name="avaliacoes_sobre_o_local">Avaliações sobre o local</string>
    <string name="cadastrar_nova_avaliacao">Cadastrar nova avaliação</string>
    <string name="avaliacao_criterios">Avalie o local abordando critérios como a iluminação, movimentação de pessoas, visibilidade, incidência de assaltos.\nLembre-se que estará ajudando uma comunidade.</string>
    <string name="invalid_password">Senha inválida, tente novamente!</string>
    <string name="empty_guardians">Você não possui guardiões</string>
    <string name="titulo_send_location_guardian">Clique no nome do guardião no qual deseja mandar sua localização</string>
    <string name="digite_a_mensagem">Digite a mensagem</string>
    <string name="plate_updated_ok">Placa atualizada com sucesso!</string>
    <string name="spot_update_ok">Avaliação atualizada com sucesso!</string>
    <string name="search_empty_plates">Não há avaliações com esssa placa!</string>
    <string name="email_invalid">Email inválido</string>
    <string name="conection_error">Ocorreu um erro. Verifique sua conexão com a internet.</string>
    <string name="dangerous_spot">Local perigoso</string>
    <string name="next_to_spot">Próxima a um local marcado como perigoso.</string>
    <string name="you">Você</string>
    <string name="chat_start">Digite \'Olá\' para iniciar conversa.</string>
    <string name="youarehere">Você está aqui!</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="diferent_passwords">Senhas diferentes</string>
    <string name="share_loc">Compartilhar localização</string>
    <string name="alert_shareloc">Você deseja confirmar o compartilhamento da sua localização com o guardião selecionado? Protifique-se de verificar se o número do guardião está correto e se o mesmo possui WhatsApp!</string>
    <string name="loc_sent">Localização enviada</string>
    <string name="wpp_notinsta">WhatsApp not Installed</string>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>
    <string name="confirmar_ligacao">Confirmar ligação</string>
    <string name="ligacao_continuar">Você está prestes a ligar para polícia militar. Deseja continuar?</string>
    <string name="realmente_sair">Deseja realmente sair?</string>
    <string name="guardiao_continuar">Você está prestes a ligar para seu guardião. Deseja continuar?</string>
    <string name="nao_possui_guardioes">Você não possui guardiões!</string>
    <string name="mensagem">Mensagem</string>
    <string name="avaliacao_impossivel">Não foi possível recuperar as avaliações</string>

</resources>
