<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagina_login"
    android:orientation="vertical"
    tools:context=".view.activity.ProfileActivity">


    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="117dp"
        android:layout_height="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
        app:layout_constraintStart_toStartOf="@+id/guideline_esquerdo"
        app:layout_constraintTop_toTopOf="parent"></ProgressBar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_esquerdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_direito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />


    <TextView
        android:id="@+id/guardian_texto"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/viga"
        android:gravity="start"
        android:text="@string/cadastro_guard_titulo"
        android:textColor="@color/login_detalhes_formulario"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/guideline_esquerdo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nome_guardiao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:background="@drawable/campo_texto"
        android:hint="@string/nome_completo"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/login_detalhes_formulario"
        android:textColorHint="@color/login_detalhes_formulario"
        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_esquerdo"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/telefone_guardiao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/campo_texto"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:padding="16dp"
        android:textColor="@color/login_detalhes_formulario"
        android:textColorHint="@color/login_detalhes_formulario"
        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_esquerdo"
        app:layout_constraintTop_toBottomOf="@+id/nome_guardiao"
        app:mask="(##) #####-####" />

    <EditText
        android:id="@+id/email_guardiao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/campo_texto"
        android:hint="@string/e_mail"
        android:autofillHints="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/login_detalhes_formulario"
        android:textColorHint="@color/login_detalhes_formulario"
        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_esquerdo"
        app:layout_constraintTop_toBottomOf="@+id/telefone_guardiao" />

    <Button
        android:id="@+id/bt_confirmar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/design_botao"
        android:text="@string/confirmar"
        android:textColor="@color/login_detalhes_formulario_medio"
        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_esquerdo"
        app:layout_constraintTop_toBottomOf="@+id/email_guardiao" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="157dp"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_cancelar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/guardioes_icon" />

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/informativo_guardioes"
        android:textColor="@color/login_detalhes_formulario"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_esquerdo"
        app:layout_constraintTop_toBottomOf="@+id/guardian_texto" />

    <Button
        android:id="@+id/bt_cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/design_botao"
        android:text="@string/cancelar"
        android:textColor="@color/login_detalhes_formulario_medio"
        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_esquerdo"
        app:layout_constraintTop_toBottomOf="@+id/bt_confirmar" />


</androidx.constraintlayout.widget.ConstraintLayout>