<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagina_login"
    tools:context=".view.activity.ResetPasswordActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineESQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDIR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <EditText
        android:id="@+id/emailet"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/campo_texto"
        android:ems="10"
        android:hint="@string/e_mail"
        android:autofillHints="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/login_detalhes_formulario"
        android:textColorHint="@color/login_detalhes_formulario"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDIR"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineESQ"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/informativo_reset_senha"
        android:textColor="@color/login_detalhes_formulario"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDIR"
        app:layout_constraintStart_toStartOf="@+id/guidelineESQ"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetbt"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/design_botao"
        android:text="@string/enviar"
        android:textColor="@color/login_detalhes_formulario_medio"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDIR"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guidelineESQ"
        app:layout_constraintTop_toBottomOf="@+id/emailet" />
</androidx.constraintlayout.widget.ConstraintLayout>