<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SafeRidesActivity"
    android:background="@drawable/pagina_login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_esquerdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_direito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/placas_texto"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/viga"
        android:gravity="start"
        android:text="@string/placas_avaliadas"
        android:textColor="@color/login_detalhes_formulario"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_esquerdo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pesquisa"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/campo_texto"
        android:hint="@string/pesquisar"
        android:inputType="text"
        android:textColor="@color/login_detalhes_formulario"
        android:textColorHint="@color/login_detalhes_formulario"
        app:layout_constraintEnd_toStartOf="@+id/bt_pesquisa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
        app:layout_constraintTop_toBottomOf="@id/placas_texto" />

    <Button
        android:id="@+id/bt_pesquisa"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:background="@drawable/design_botao"
        android:drawableTop="@drawable/search_icon"
        app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
        app:layout_constraintTop_toTopOf="@+id/pesquisa" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView_placas"
        android:layout_width="356dp"
        android:layout_height="474dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_esquerdo"
        app:layout_constraintTop_toBottomOf="@+id/pesquisa" />

    <Button
        android:id="@+id/bt_avaliar_placa"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline_esquerdo"
        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
        app:layout_constraintTop_toBottomOf="@id/recycleView_placas"
        android:background="@drawable/design_botao"
        android:textColor="@color/login_detalhes_formulario_medio"
        android:text="@string/avaliar_placa"
        />


</androidx.constraintlayout.widget.ConstraintLayout>